# open-coroutine

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-THIRD-PARTY  README.md  README_ZH.md  TODO.md  build.rs  deny.toml  publish.sh
base-coroutine/: Cargo.toml  build.rs
base-coroutine/include/: libcoroutine.h
base-coroutine/src/: coroutine.rs  id.rs  lib.rs  monitor.rs  pool.rs  random.rs  scheduler.rs  work_steal.rs  work_steal_v2.rs
base-coroutine/src/context/: mod.rs
base-coroutine/src/event_loop/: interest.rs  mod.rs
base-coroutine/src/event_loop/event/: events.rs
base-coroutine/src/event_loop/selector/: epoll.rs  kqueue.rs
base-coroutine/src/stack/: mod.rs
base-coroutine/src/stack/sys/: mod.rs  unix.rs  windows.rs
core/: Cargo.toml
core/c_src/: version.c
core/docs/cn/: coroutine-pool.md  coroutine.md  monitor.md  ordered-work-steal.md  overview.md  scalable-stack.md  why-better.md  work-steal.md
core/docs/en/: coroutine-pool.md  coroutine.md  monitor.md  ordered-work-steal.md  overview.md  scalable-stack.md  why-better.md  work-steal.md
core/src/: config.rs  lib.rs  monitor.rs  scheduler.rs
core/src/co_pool/: creator.rs  mod.rs  state.rs  task.rs
core/src/common/: beans.rs  ci.rs  constants.rs  macros.rs  memory_pool.rs  mod.rs  ordered_work_steal.rs  timer.rs  work_steal.rs
core/src/coroutine/: korosensei.rs  listener.rs  local.rs  mod.rs  stack_pool.rs  state.rs  suspender.rs
core/src/net/: config.rs  event_loop.rs  join.rs  mod.rs
core/src/net/operator/: mod.rs  windows.rs
core/src/net/selector/: mio_adapter.rs  mod.rs  polling_adapter.rs
core/src/syscall/: common.rs  mod.rs
core/src/syscall/unix/: accept.rs  accept4.rs  close.rs  connect.rs  fsync.rs  link.rs  listen.rs  lseek.rs  mkdir.rs  mkdirat.rs  mod.rs  nanosleep.rs  poll.rs  pread.rs  preadv.rs  pthread_cond_timedwait.rs  pthread_mutex_lock.rs  pthread_mutex_trylock.rs  pthread_mutex_unlock.rs  pwrite.rs  pwritev.rs  read.rs  readv.rs  recv.rs  recvfrom.rs  recvmsg.rs  renameat.rs  renameat2.rs  rmdir.rs  select.rs  send.rs  sendmsg.rs  sendto.rs  setsockopt.rs  shutdown.rs  sleep.rs  socket.rs  unlink.rs  usleep.rs  write.rs  (+1 more)
core/src/syscall/windows/: CreateFileW.rs  SetFilePointerEx.rs  Sleep.rs  WSAAccept.rs  WSAPoll.rs  WSARecv.rs  WSASend.rs  WSASocketW.rs  WaitOnAddress.rs  accept.rs  connect.rs  ioctlsocket.rs  (+8 more)
core/tests/: co_pool.rs  coroutine.rs  scheduler.rs
examples/: 01basic.rs  02base_echo_client.rs  02base_echo_server.rs  02hooked_echo_client.rs  02hooked_echo_server.rs  Cargo.toml  README.md  base_echo_client.rs  base_echo_server.rs  basic.rs  change_pc.rs  co_client.rs  co_server.rs  echo_client.rs  echo_server.rs  hello.rs  not_co.rs  preemptive.rs
examples/examples/: co.rs  co_client.rs  sleep_co.rs  sleep_not_co.rs  socket_co.rs  socket_co_client.rs  socket_co_server.rs  socket_not_co.rs
examples/src/: lib.rs
hook/: Cargo.toml
hook/docs/cn/: hook.md
hook/docs/en/: hook.md
hook/src/: lib.rs
hook/src/syscall/: mod.rs  unix.rs  windows.rs
libhook/: Cargo.toml  build.rs
libhook/src/: common.rs  epoll.rs  lib.rs  unix.rs  windows.rs
libhook/src/event_loop/: mod.rs
libhook/src/unix/: bsd.rs  common.rs  linux_like.rs  mod.rs
libhookV2/: CMakeLists.txt  libhook.cpp  libhook.h  main.cpp
macros/: Cargo.toml
macros/src/: lib.rs
object-collection/: Cargo.toml
object-collection/src/: lib.rs  list.rs  map.rs
open-coroutine/: Cargo.toml  README.md  build.rs
open-coroutine-core/: Cargo.toml  README.md  build.rs
open-coroutine-core/cpp_src/: version.cpp
open-coroutine-core/examples/: complex_preemptive.rs  preemptive.rs
open-coroutine-core/src/: common.rs  config.rs  constants.rs  coroutine.rs  defer.rs  lib.rs  log.rs  monitor.rs  scheduler.rs  stack_trace.rs  version.rs
open-coroutine-core/src/context/: mod.rs
open-coroutine-core/src/coroutine/: korosensei.rs  listener.rs  local.rs  mod.rs  state.rs  suspender.rs  tests.rs
open-coroutine-core/src/event_loop/: blocker.rs  core.rs  interest.rs  join.rs  mod.rs  selector.rs  task.rs
open-coroutine-core/src/monitor/: creator.rs  current.rs  mod.rs  node.rs
open-coroutine-core/src/net/: mod.rs
open-coroutine-core/src/pool/: blocker.rs  creator.rs  current.rs  has.rs  join.rs  mod.rs  task.rs  tests.rs
open-coroutine-core/src/scheduler/: current.rs  has.rs  join.rs  listener.rs  mod.rs  tests.rs
open-coroutine-core/src/syscall/: Sleep.rs  common.rs  facade.rs  io_uring.rs  mod.rs  nio.rs  raw.rs  state.rs
open-coroutine-hooks/: Cargo.toml  README.md
open-coroutine-hooks/src/: common.rs  coroutine.rs  lib.rs  task.rs
open-coroutine-hooks/src/unix/: common.rs  linux_like.rs  mod.rs  read.rs  sleep.rs  socket.rs  write.rs
open-coroutine-hooks/src/windows/: mod.rs
open-coroutine-iouring/: Cargo.toml  README.md
open-coroutine-iouring/cpp_src/: version.cpp  version.h
open-coroutine-iouring/src/: io_uring.rs  lib.rs  version.rs
open-coroutine-macros/: Cargo.toml  README.md
open-coroutine-macros/src/: lib.rs
open-coroutine-queue/: Cargo.toml  README.md
open-coroutine-queue/src/: lib.rs  rand.rs  work_steal.rs
open-coroutine-timer/: Cargo.toml  README.md
open-coroutine-timer/src/: lib.rs  typed.rs
open-coroutine-utils/: Cargo.toml  README.md  build.rs
open-coroutine-utils/cpp_src/: version.h
open-coroutine-utils/src/: lib.rs
open-coroutine/benches/: benchmark.rs
open-coroutine/dylib/: libhook.dylib
open-coroutine/examples/: file_co.rs  file_not_co.rs  preemptive.rs  scalable_stack.rs  sleep_co.rs  sleep_not_co.rs  socket_co.rs  socket_co_client.rs  socket_co_server.rs  socket_not_co.rs
open-coroutine/src/: coroutine.rs  join.rs  lib.rs  task.rs
open-coroutine/tests/: file_co.rs  file_not_co.rs  preemptive.rs  scalable_stack.rs  sleep_co.rs  sleep_not_co.rs  socket_co.rs  socket_co_client.rs  socket_co_server.rs  socket_not_co.rs
timer-utils/: Cargo.toml
timer-utils/src/: generic.rs  lib.rs  typed.rs
work-steal-queue/: Cargo.toml
work-steal-queue/src/: deque.rs  lib.rs  rand.rs  work_steal.rs
(+205 files in other folders)
