[package]
name = "open-coroutine"
version = "0.4.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic stackful-coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["coroutine", "fiber", "stackful", "hook"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
open-coroutine-core = { version = "0.4.0", path = "open-coroutine-core" }

[workspace]
members = [
    "open-coroutine-core"
]
