[package]
name = "open-coroutine"
version = "0.4.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic stackful-coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["coroutine", "fiber", "stackful", "hook"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
libc = "0.2.119"
open-coroutine-core = { version = "0.4.0", path = "open-coroutine-core" }
open-coroutine-macros = { version = "0.1.0", path = "open-coroutine-macros" }

[workspace]
members = [
    "open-coroutine-timer",
    "open-coroutine-queue",
    "open-coroutine-core",
    "open-coroutine-hooks",
    "open-coroutine-macros"
]
