[workspace]
resolver = "2"
members = [
    "core",
    "hook",
    "macros",
    "open-coroutine"
]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
repository = "https://github.com/acl-dev/open-coroutine"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
open-coroutine-core = { path = "core", version = "0.6.0" }
open-coroutine-hook = { path = "hook", version = "0.6.0" }
open-coroutine-macros = { path = "macros", version = "0.6.0" }

tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
mio = { version = "1.0", default-features = false }

cfg-if = "1.0.0"
polling = "2.8.0"

libc = "0.2"
rand = "0.8"
st3 = "0.4"
crossbeam-deque = "0.8"
time = "0.3"
corosensei = "0.2"
core_affinity = "0.8"
crossbeam-utils = "0.8"
nix = "0.29"
io-uring = "0.7"
windows-sys = "0.59"
anyhow = "1.0"
slab = "0.4"
backtrace = "0.3"
minhook = "0.6"
psm = "0.1"

once_cell = "1"
dashmap = "6"
num_cpus = "1"
uuid = "1"
derivative = "2"
tempfile = "3"
cc = "1"
syn = "2"
quote = "1"
