[package]
name = "base-coroutine"
version = "0.0.2"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "A fast and safe implementation of stackful coroutines with schedulers."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/base-coroutine"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
once_cell = "1.13.0"
scopeguard = "1.1.0"
object-collection = { version = "0.0.2", path = "../object-collection" }
timer-utils = { version = "0.0.2", path = "../timer-utils" }

[target."cfg(unix)".dependencies]
libc = { version = "0.2.137", optional = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
], optional = true }

[build-dependencies]
cc = "1.0.73"
rustversion = "1.0.6"
