[package]
name = "base-coroutine"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "A fast and safe implementation of stackful coroutines with scheduler which supports preemptive scheduling."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/base-coroutine"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
libc = "0.2.137"
once_cell = "1.13.0"
scopeguard = "1.1.0"
num_cpus = "1.14.0"
concurrent-queue = "2.0.0"
st3 = "0.4.0"
rayon = "1.6.1"
object-collection = { version = "0.0.3", path = "../object-collection" }
timer-utils = { version = "0.0.3", path = "../timer-utils" }

[target."cfg(unix)".dependencies]
jemalloc-sys = { version = "0.5.2+5.3.0-patched", default-features = false }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_DistributedFileSystem",
    "Win32_Storage_FileSystem",
    "Win32_Networking",
    "Win32_Networking_WinSock"
] }

[build-dependencies]
cc = "1.0.73"
rustversion = "1.0.6"
