[package]
name = "open-coroutine-examples"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The examples for open-coroutine"
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/examples"
keywords = ["open-coroutine", "example"]
categories = ["os", "concurrency", "asynchronous"]
license = "LGPL-3.0 OR Apache-2.0"
readme = "../README.md"

[dependencies]
open-coroutine = { version = "0.5.0", path = "../open-coroutine" }
