[package]
name = "libhook"
version = "0.0.1"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "Hook system calls."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/libhook"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
libc = "0.2.119"
base-coroutine = { version = "0.0.1", path = "../base-coroutine" }
timer-utils = { version = "0.0.1", path = "../timer-utils" }

[lib]
crate-type = ["cdylib"]
name = "hook"
path = "src/lib.rs"
