[package]
name = "libhook"
version = "0.0.3"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "Hook system calls."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/libhook"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
# 添加libc的依赖后，就不需要再重复地一个个声明系统函数了
libc = "0.2.119"
base-coroutine = { version = "0.0.1", path = "../base-coroutine" }
timer-utils = { version = "0.0.1", path = "../timer-utils" }

[lib]
crate-type = ["cdylib"]
name = "hook"
path = "src/lib.rs"
