[package]
name = "libhook"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "Hook system calls."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/libhook"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
libc = "0.2.138"
once_cell = "1.13.0"
num_cpus = "1.14.0"
base-coroutine = { version = "0.2.0", features = ["full"], path = "../base-coroutine" }
timer-utils = { version = "0.0.3", path = "../timer-utils" }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.45.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices"
] }
detour2 = { version = "0.9.0", path = "../detour2" }

[lib]
crate-type = ["cdylib"]
name = "hook"
path = "src/lib.rs"
