[package]
name = "open-coroutine-macros"
version.workspace = true
edition.workspace = true
description = "The proc macros for open-coroutine"
repository.workspace = true
keywords = ["open-coroutine", "macro"]
categories = ["concurrency", "asynchronous", "os", "network-programming", "wasm"]
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote.workspace = true

[lib]
proc-macro = true