[package]
name = "open-coroutine-core"
version = "0.4.1"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic stackful-coroutine library."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-core"
keywords = ["coroutine", "fiber", "stackful", "hook"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
corosensei = "0.1.3"
libc = "0.2.137"
cfg-if = "1.0.0"
once_cell = "1.13.0"
num_cpus = "1.14.0"
uuid = { version = "1.3.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
crossbeam-utils = "0.8.15"
crossbeam-deque = "0.8.2"
dashmap = "5.5.1"
polling = "2.8.0"
core_affinity = "0.8.0"
open-coroutine-timer = { version = "0.1.1", path = "../open-coroutine-timer" }
open-coroutine-queue = { version = "0.1.2", path = "../open-coroutine-queue" }
open-coroutine-iouring = { version = "0.1.0", path = "../open-coroutine-iouring" }
log = { version = "0.4.20", optional = true }
simplelog = { version = "0.12.1", optional = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"] }

[dev-dependencies]
backtrace = "0.3.67"

[features]
default = ["full"]

# Provide preemptive scheduling implementation.
# Enable for default.
preemptive-schedule = []

# Print some help log.
# Enable for default.
logs = ["log", "simplelog"]

# Enable all features
full = ["preemptive-schedule", "logs"]
