[package]
name = "open-coroutine-hooks"
version = "0.4.1"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The syscall hook for open-coroutine"
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-hooks"
keywords = ["open-coroutine", "hook", "syscall"]
categories = ["os", "concurrency", "asynchronous"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
libc = "0.2.138"
once_cell = "1.13.0"
num_cpus = "1.14.0"
cfg-if = "1.0.0"
open-coroutine-core = { version = "0.4.0", path = "../open-coroutine-core" }
open-coroutine-timer = { version = "0.1.1", path = "../open-coroutine-timer" }
open-coroutine-iouring = { version = "0.1.0", path = "../open-coroutine-iouring" }
log = { version = "0.4.20", optional = true }
simplelog = { version = "0.12.1", optional = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices"
] }
retour = { version = "0.3.1", features = ["static-detour"] }

[lib]
crate-type = ["cdylib"]

[features]
default = ["full"]

# Provide preemptive scheduling implementation.
# Enable for default.
preemptive-schedule = ["open-coroutine-core/preemptive-schedule"]

# Print some help log.
# Enable for default.
logs = ["log", "simplelog", "open-coroutine-core/logs"]

# Enable all features
full = ["preemptive-schedule", "logs"]
