[package]
name = "open-coroutine-hooks"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The syscall hook for open-coroutine"
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-hooks"
keywords = ["open-coroutine", "hook", "syscall"]
categories = ["os", "concurrency", "asynchronous"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
libc = "0.2.150"
once_cell = "1.18.0"
num_cpus = "1.16.0"
cfg-if = "1.0.0"
open-coroutine-core = { version = "0.5.0", path = "../open-coroutine-core", features = [
    "syscall"], default-features = false }
log = { version = "0.4.20", optional = true }
simplelog = { version = "0.12.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices"
] }
retour = { version = "0.3.1", features = ["static-detour"] }

[lib]
crate-type = ["cdylib"]

[features]
default = ["full"]

# Provide preemptive scheduling implementation.
# Enable for default.
preemptive-schedule = ["open-coroutine-core/preemptive-schedule"]

# Provide io_uring abstraction and implementation.
# This feature only works in linux.
io_uring = ["open-coroutine-core/io_uring"]

# Print some help log.
# Enable for default.
logs = ["log", "simplelog", "open-coroutine-core/logs"]

# Enable all features
full = ["preemptive-schedule", "io_uring", "logs"]
