[package]
name = "open-coroutine-macros"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The proc macros for open-coroutine"
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-macros"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
syn = { version = "2.0.2", features = ["full"] }
quote = "1.0.23"

[lib]
proc-macro = true