[package]
name = "open-coroutine-macros"
version = "0.1.2"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The proc macros for open-coroutine"
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-macros"
keywords = ["open-coroutine", "macro"]
categories = ["macro"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
num_cpus = "1.14.0"
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"

[lib]
proc-macro = true