[package]
name = "open-coroutine-macros"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The proc macros for open-coroutine"
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-macros"
keywords = ["open-coroutine", "macro"]
categories = ["concurrency", "asynchronous", "os", "network-programming", "wasm"]
license = "LGPL-3.0 OR Apache-2.0"
readme = "../README.md"

[dependencies]
num_cpus = "1.14.0"
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"

[lib]
proc-macro = true