[package]
name = "open-coroutine-timer"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The time utils."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/open-coroutine-timer"
keywords = ["open-coroutine", "timer", "utils"]
categories = ["data-structures"]
license = "LGPL-3.0 OR Apache-2.0"
readme = "../README.md"
