[package]
name = "open-coroutine"
version = "0.5.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic stackful-coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["coroutine", "fiber", "stackful", "hook"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
libc = "0.2.119"
open-coroutine-core = { version = "0.5.0", path = "../open-coroutine-core" }
open-coroutine-hooks = { version = "0.5.0", path = "../open-coroutine-hooks" }
open-coroutine-macros = { version = "0.5.0", path = "../open-coroutine-macros" }

[dev-dependencies]
# benchmark
criterion = "0.5.1"

[build-dependencies]
glob = "0.3.1"

[features]
default = ["open-coroutine-hooks/default", "open-coroutine-core/default"]

# Print some help log.
# Enable for default.
logs = ["open-coroutine-hooks/logs", "open-coroutine-core/logs"]

korosensei = ["open-coroutine-hooks/korosensei", "open-coroutine-core/korosensei"]

boost = ["open-coroutine-hooks/boost", "open-coroutine-core/boost"]

# Provide preemptive scheduling implementation.
# Enable for default.
preemptive-schedule = ["open-coroutine-hooks/preemptive-schedule", "open-coroutine-core/preemptive-schedule"]

# Provide net API abstraction and implementation.
net = ["open-coroutine-hooks/net", "open-coroutine-core/net"]

# Provide io_uring abstraction and implementation.
# This feature only works in linux.
io_uring = ["open-coroutine-hooks/io_uring", "open-coroutine-core/io_uring"]

# Provide syscall implementation.
syscall = ["open-coroutine-hooks/syscall", "open-coroutine-core/syscall"]

# Enable all features
full = ["open-coroutine-hooks/full", "open-coroutine-core/full"]

[[bench]]
name = "benchmark"
harness = false
