[package]
name = "work-steal-queue"
version = "0.1.1"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "Concurrent work-stealing queue, implemented using st3 and crossbeam-deque."
repository = "https://github.com/acl-dev/open-coroutine/tree/dev/work-steal-queue"
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
num_cpus = "1.14.0"
st3 = "0.4.1"
crossbeam-deque = "0.8.2"